--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>RTX Player - Multi-Video Playback</title>
+  <title>RTX Player - Multi-YouTube Playback</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <div class="container">
-    <h1>RTX Player - Multi-Video Playback</h1>
-    <input type="text" id="videoLink" placeholder="Enter video link here (e.g., MP4 URL)">
+    <h1>RTX Player - Multi-YouTube Playback</h1>
+    <input type="text" id="videoLink" placeholder="Enter YouTube video link">
     <input type="number" id="playerCount" placeholder="Enter number of players (1 to 1000)" min="1" max="1000">
     <button onclick="generatePlayers()">Play Video</button>
     <div id="videoContainer"></div>
